--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -71,6 +71,8 @@ spalloc:
   database-path: spalloc.sqlite3
   # How long should long calls take before returning anyway?
   wait: 30s
+  # Whether to pause ALL periodic callbacks; probably only useful for debugging
+  pause: false
   historical-data:
     # Where to we back up old jobs to?
     path: spalloc-history.sqlite3
@@ -102,6 +104,8 @@ spalloc:
       dimensions: 1.5
       # Priority scaling factor for jobs requesting a specific board
       specific-board: 65.0
+    # Number of reports of board problems at which the board is taken out of service.
+    report-action-threshold: 2
     report-email:
       # In addition to configuring the email sender, you need to turn on
       # sending here too.
@@ -129,7 +133,7 @@ spalloc:
     unlock-period: PT60S
   quota:
     # Default user quota in board-seconds
-    default: 100
+    default-quota: 130
     # When do we consolidate job quotas into the main quota table
     consolidation-schedule: "0 0 * * * *"
   transceiver:
