--- a/SpiNNaker-allocserv/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/SpiNNaker-allocserv/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -39,30 +39,10 @@
   {"name": "spalloc.transceiver.fpga-attempts"},
   {"name": "spalloc.auth.basic"},
   {"name": "spalloc.auth.local-form"},
-  {
-    "name": "spalloc.auth.oidc",
-    "type": "java.lang.Boolean",
-    "defaultValue": true,
-    "description": "Whether to enable OIDC authentication. Required for allowing people to use HBP/EBRAINS identities."
-  },
-  {
-    "name": "spalloc.auth.openid.id",
-    "type": "java.lang.String",
-    "defaultValue": "CHANGE THIS",
-    "description": "The application installation identity. Required for allowing people to use HBP/EBRAINS identities."
-  },
-  {
-    "name": "spalloc.auth.openid.secret",
-    "type": "java.lang.String",
-    "defaultValue": "CHANGE THIS",
-    "description": "The application installation secret. Required for allowing people to use HBP/EBRAINS identities."
-  },
-  {
-    "name": "spalloc.auth.openid.username-prefix",
-    "type": "java.lang.String",
-    "defaultValue": "openid.",
-    "description": "Prefix for user names originating from OpenID auto-registration."
-  },
+  {"name": "spalloc.auth.openid.enable"},
+  {"name": "spalloc.auth.openid.id"},
+  {"name": "spalloc.auth.openid.secret"},
+  {"name": "spalloc.auth.openid.username-prefix"},
   {"name": "spalloc.auth.add-dummy-user"},
   {"name": "spalloc.auth.dummy-random-pass"},
   {"name": "spalloc.auth.debug-failures"},
