--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -143,8 +143,6 @@ spalloc:
     basic: true
     # Support HTTP Form Authentication (pretty necessary)
     local-form: true
-    # Support OIDC
-    oidc: true
     # Force a known local admin user to exist with a known password
     add-dummy-user: true
     # Whether to generate a random password for the above user.
@@ -159,6 +157,8 @@ spalloc:
     # How often do we look for users to unlock
     unlock-period: PT60S
     openid:
+      # Support OIDC
+      enable: true
       # The credentials for HBP/EBRAINS go here
       id: XYZZY_OVERRIDE_THIS
       secret: XYZZY_OVERRIDE_THIS
