Well, the tests now run
I don't claim that this means things work! Just that we've got enough of
a configuration set up for it to not collapse during environment boot

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -64,6 +64,7 @@ spring:
             - profile
             - team
             - group
+            authorization-grant-type: client_credentials
         provider:
           hbp-ebrains:
             authorization-uri: https://iam.ebrains.eu/auth/realms/hbp/protocol/openid-connect/auth
