--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -37,6 +37,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<jetty.port>8080</jetty.port>
 		<jetty.root>/</jetty.root>
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
+		<start.class>uk.ac.manchester.spinnaker.alloc.ServiceConfig</start.class>
 	</properties>
 
 	<build>
@@ -79,10 +80,19 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring.boot.version}</version>
+				<executions>
+					<execution>
+						<id>repackage</id>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<systemPropertyVariables>
 						<java.util.logging.manager>org.apache.logging.log4j.jul.LogManager</java.util.logging.manager>
 					</systemPropertyVariables>
+					<mainClass>${start.class}</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
