--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -36,6 +36,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<node.version>v14.17.6</node.version>
 		<closure-compiler.version>2.21.0</closure-compiler.version>
 		<build-helper.version>3.2.0</build-helper.version>
+		<commons-math.version>3.6.1</commons-math.version>
 
 		<!-- These ought to be one, but of course they aren't. -->
 		<typescript-language.version>ES6</typescript-language.version>
@@ -247,6 +248,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>spring-webmvc</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-math3</artifactId>
+				<version>${commons-math.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -364,6 +370,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
