--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -156,6 +156,8 @@ spalloc:
     analysis-limit: 400
     # Whether to record and report statement execution time statistics
     performance-log: false
+    # Number of nanoseconds below which statement execution time is not important
+    performance-threshold: 1e6
   compat:
     # Settings relating to the v1 spalloc compatibility interface
 
