Get the OpenID auth realm right
Of course, this immediately failed because Java doesn't trust modern
certificates by default. This should be easy to fix, yes? No!
https://github.com/spring-projects/spring-security/issues/8882
Instead we have to fabricobble something together from
https://stackoverflow.com/a/24561444/301832
and my knowledge of how Spring works. It's at least as gnarly as
anything in the guts of Spring Security, and we shouldn't have had to do
it ourselves — not having to do this shit is WHY WE USE FRAMEWORKS IN
THE FIRST PLACE — but here we are nonetheless.

--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -147,6 +147,25 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>uk.co.automatictester</groupId>
+				<artifactId>truststore-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate-truststore</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<truststoreFile>${project.build.outputDirectory}/truststore.p12</truststoreFile>
+							<truststorePassword>hunter2</truststorePassword>
+							<urls>
+								<url>https://iam.ebrains.eu/auth/realms/hbp/.well-known/openid-configuration</url>
+							</urls>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 
 		<pluginManagement>
@@ -210,6 +229,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						<encoding>${project.build.sourceEncoding}</encoding>
 						<outputFilename>#{basename}.#{extension}</outputFilename>
 						<closureLanguageOut>${javascript-language.version}</closureLanguageOut>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>uk.co.automatictester</groupId>
+					<artifactId>truststore-maven-plugin</artifactId>
+					<version>2.4.0</version>
+					<configuration>
+						<includeDefaultTruststore>true</includeDefaultTruststore>
+						<trustAllCertificates>true</trustAllCertificates>
+						<truststoreFormat>PKCS12</truststoreFormat>
 					</configuration>
 				</plugin>
 			</plugins>
