--- a/pom.xml
+++ b/pom.xml
@@ -386,12 +386,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<pluginExecutions>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.commonjava.maven.plugins
-										</groupId>
-										<artifactId>
-											directory-maven-plugin
-										</artifactId>
+										<groupId>org.commonjava.maven.plugins</groupId>
+										<artifactId>directory-maven-plugin</artifactId>
 										<versionRange>[0.1,)</versionRange>
 										<goals>
 											<goal>highest-basedir</goal>
@@ -399,6 +395,19 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 									</pluginExecutionFilter>
 									<action>
 										<execute />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>uk.co.automatictester</groupId>
+										<artifactId>truststore-maven-plugin</artifactId>
+										<versionRange>[2.0,)</versionRange>
+										<goals>
+											<goal>generate-truststore</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute/>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
