--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -74,6 +74,25 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>make-project-output-directory</id>
+						<phase>initialize</phase>
+						<configuration>
+							<tasks>
+								<delete dir="${project.build.outputDirectory}"/>
+								<mkdir dir="${project.build.outputDirectory}"/>
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<!-- Typescript compiler -->
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
