--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -37,6 +37,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<closure-compiler.version>2.21.0</closure-compiler.version>
 		<build-helper.version>3.2.0</build-helper.version>
 		<commons-math.version>3.6.1</commons-math.version>
+		<truststore-maven-plugin.version>2.4.0</truststore-maven-plugin.version>
 
 		<!-- These ought to be one, but of course they aren't. -->
 		<typescript-language.version>ES6</typescript-language.version>
@@ -44,6 +45,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<start.class>uk.ac.manchester.spinnaker.alloc.ServiceConfig</start.class>
+		<!-- TLS-secured connection that we need to make at runtime startup. -->
+		<ebrains.wellknown.url>https://iam.ebrains.eu/auth/realms/hbp/.well-known/openid-configuration</ebrains.wellknown.url>
 	</properties>
 
 	<build>
@@ -179,7 +182,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<truststoreFile>${project.build.outputDirectory}/truststore.p12</truststoreFile>
 							<truststorePassword>hunter2</truststorePassword>
 							<urls>
-								<url>https://iam.ebrains.eu/auth/realms/hbp/.well-known/openid-configuration</url>
+								<url>${ebrains.wellknown.url}</url>
 							</urls>
 						</configuration>
 					</execution>
@@ -253,7 +256,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<plugin>
 					<groupId>uk.co.automatictester</groupId>
 					<artifactId>truststore-maven-plugin</artifactId>
-					<version>2.4.0</version>
+					<version>${truststore-maven-plugin.version}</version>
 					<configuration>
 						<trustAllCertificates>true</trustAllCertificates>
 						<truststoreFormat>PKCS12</truststoreFormat>
