--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
 		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
 
-		<spinnaker.version>6.0.1-SNAPSHOT</spinnaker.version>
 		<slf4j.version>1.7.32</slf4j.version>
-		<log4j.version>2.14.1</log4j.version>
+		<log4j.version>2.15.0</log4j.version>
 		<junit.version>5.8.2</junit.version>
 		<checkstyle.version>9.2</checkstyle.version>
 
@@ -45,6 +44,21 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-bom</artifactId>
+				<version>${log4j.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson</groupId>
+				<artifactId>jackson-bom</artifactId>
+				<version>${jackson.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter</artifactId>
@@ -60,27 +74,27 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<dependency>
 				<groupId>uk.ac.manchester.spinnaker</groupId>
 				<artifactId>SpiNNaker-utils</artifactId>
-				<version>${spinnaker.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.manchester.spinnaker</groupId>
 				<artifactId>SpiNNaker-machine</artifactId>
-				<version>${spinnaker.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.manchester.spinnaker</groupId>
 				<artifactId>SpiNNaker-storage</artifactId>
-				<version>${spinnaker.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.manchester.spinnaker</groupId>
 				<artifactId>SpiNNaker-comms</artifactId>
-				<version>${spinnaker.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.manchester.spinnaker</groupId>
 				<artifactId>SpiNNaker-data-specification</artifactId>
-				<version>${spinnaker.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -98,13 +112,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>log4j-slf4j-impl</artifactId>
 				<version>${log4j.version}</version>
 				<scope>runtime</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson</groupId>
-				<artifactId>jackson-bom</artifactId>
-				<version>${jackson.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -145,11 +152,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<groupId>org.xerial</groupId>
 				<artifactId>sqlite-jdbc</artifactId>
 				<version>3.36.0.3</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-core</artifactId>
-				<version>${log4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
