--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -14,6 +14,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 logging:
+  file:
+    name: ${spalloc.working-directory}/spalloc.log
   level:
     root: INFO
     # "[org.apache.catalina]": DEBUG
@@ -86,15 +88,17 @@ cxf:
 
 # TODO: Don't set auth.add-dummy-user, transceiver.dummy or auth.debug-failures in production
 spalloc:
+  # Where we hold files that we write to
+  working-directory: "."
   # Where's the database?
-  database-path: spalloc.sqlite3
+  database-path: ${spalloc.working-directory}/spalloc.sqlite3
   # How long should long calls take before returning anyway?
   wait: 30s
   # Whether to pause ALL periodic callbacks; probably only useful for debugging
   pause: false
   historical-data:
     # Where to we back up old jobs to?
-    path: spalloc-history.sqlite3
+    path: ${spalloc.working-directory}/spalloc-history.sqlite3
     # How long before we move old jobs to the historical data
     # Defaults to 14 days (or thereabouts)
     grace-period: 14d
