Move the /system part into the app
That'll let us put a root redirect in

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
     name: spalloc
   mvc:
     servlet:
-      path: /spalloc/system
+      path: /spalloc
   task:
     scheduling:
       pool:
