Report version info in UI root page

--- a/SpiNNaker-allocserv/src/main/resources-filtered/service.properties
+++ b/SpiNNaker-allocserv/src/main/resources-filtered/service.properties
@@ -14,5 +14,4 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 version: ${project.version}
-cxf.rest.path: /
-num.threads: 16
+build-timestamp: ${maven.build.timestamp}
