Clean up the testing by not poking OpenID Connect during test
It's imperfect, but the OIDC config is very sensitive to exactly how it
is used during test, causing wild problems when running tests inside
Eclipse. I've no idea why the loading of the truststore isn't happening
at the right time, but it isn't and the pain isn't worth it, especially
when the tests in question aren't supposed to be of the OIDC config!

Also a cleaner way of configuring the truststore, generating it in a
subdir of target that is marked as a place to get (binary) resources
from.

--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -58,6 +58,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<directory>src/main/resources-filtered</directory>
 				<filtering>true</filtering>
 			</resource>
+			<resource>
+				<directory>target/generated-resources</directory>
+			</resource>
 		</resources>
 		<finalName>spalloc</finalName>
 		<plugins>
@@ -85,8 +88,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						<phase>initialize</phase>
 						<configuration>
 							<tasks>
-								<delete dir="${project.build.outputDirectory}"/>
-								<mkdir dir="${project.build.outputDirectory}"/>
+								<mkdir dir="${project.build.directory}/generated-resources"/>
 							</tasks>
 						</configuration>
 						<goals>
@@ -179,7 +181,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						</goals>
 						<phase>generate-resources</phase>
 						<configuration>
-							<truststoreFile>${project.build.outputDirectory}/truststore.p12</truststoreFile>
+							<truststoreFile>${project.build.directory}/generated-resources/truststore.p12</truststoreFile>
 							<truststorePassword>hunter2</truststorePassword>
 							<urls>
 								<url>${ebrains.wellknown.url}</url>
