--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -54,26 +54,6 @@ spring:
     properties:
       "[mail.smtp.auth]": true
       "[mail.smtp.starttls.enable]": true
-  security:
-    oauth2:
-      client:
-        registration:
-          hbp-ebrains:
-            client-id: ${spalloc.auth.openid.id}
-            client-secret: ${spalloc.auth.openid.secret}
-            scope: [ openid, profile, email ]
-            authorization-grant-type: authorization_code
-            redirect-uri: https://{baseHost}{basePort}{basePath}/system/perform_oidc/{action}/code/{registrationId}
-        provider:
-          hbp-ebrains:
-            issuer-uri: ${spalloc.auth.openid.domain}
-            user-name-attribute: preferred_username
-      resourceserver:
-        jwt:
-          issuer-uri: ${spalloc.auth.openid.domain}
-        opaquetoken:
-          client-id: ${spalloc.auth.openid.id}
-          client-secret: ${spalloc.auth.openid.secret}
 
 server:
   port: 8080
@@ -208,3 +188,30 @@ spalloc:
     port: 22244
     # What user to run as; recommended that this user exists but is disabled
     service-user: ""
+
+---
+# Only enable the OpenID Connect stuff in production. This is because of the
+# sheer nastiness of interacting with Keycloak and the fact that it is done
+# during application boot. Putting it here makes things more reliable.
+spring:
+  profiles: default
+  security:
+    oauth2:
+      client:
+        registration:
+          hbp-ebrains:
+            client-id: ${spalloc.auth.openid.id}
+            client-secret: ${spalloc.auth.openid.secret}
+            scope: [ openid, profile, email ]
+            authorization-grant-type: authorization_code
+            redirect-uri: https://{baseHost}{basePort}{basePath}/system/perform_oidc/{action}/code/{registrationId}
+        provider:
+          hbp-ebrains:
+            issuer-uri: ${spalloc.auth.openid.domain}
+            user-name-attribute: preferred_username
+      resourceserver:
+        jwt:
+          issuer-uri: ${spalloc.auth.openid.domain}
+        opaquetoken:
+          client-id: ${spalloc.auth.openid.id}
+          client-secret: ${spalloc.auth.openid.secret}
